Fixed white space issue for mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,4 @@
 /* ./styles/globals.css */
-* {
-  padding: 0;
-  margin: 0;
-}
-html,
-body,
-#fullheight {
-  min-height: 100% !important;
-  height: 100%;
-}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
